# finisher

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .repomixignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  launcher.py  package.json  pyproject.toml  repomix.config.json  test_app.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: DEPENDENCIES.md  DEVELOPMENT_WORKFLOW.md  PRD.md  QUEUE_SYSTEM_DESIGN.md  TECHNICAL_STACK.md
scripts/: build.py  bump_version.py
src/finisher/: __init__.py  app_controller.py  main.py
src/finisher/api/: __init__.py  client.py  config.py  models.py
src/finisher/config/: __init__.py  defaults.py  settings.py
src/finisher/core/: __init__.py  batch_input_handler.py  enhanced_queue_manager.py  error_handler.py  input_handler.py  job_manager.py  metadata.py  processor.py  queue_models.py  status_monitor.py  upscaling_pipeline.py  utils.py
src/finisher/gui/: __init__.py  components.py  enhanced_status.py  main_window.py  queue_panel.py
tests/: __init__.py  conftest.py  test_main.py
tests/test_api/: test_client.py
tests/test_config/: test_settings.py
tests/test_core/: test_processor.py  test_utils.py
tests/test_gui/: test_components.py  test_main_window.py
